Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,51 +1,36 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
+    <meta name="description" content="Web Infans - a yeoman webapp generator : Gulp, preprocessors, automated js / sass documentation &amp; styleguide, twig templating, create a minified build folder etc...">
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
-    <title>Web Infans - a yeoman webapp generator by chrisvanmook</title>
+    <title>Web Infans - a yeoman webapp generator</title>
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/chrisvanmook/generator-web-infans">View on GitHub</a>
-    <div class="shell">
 
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Web Infans - a yeoman webapp generator</h1>
-            <h2>Gulp, preprocessors, automated js / sass documentation &amp; styleguide, create a minified build folder etc...</h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/chrisvanmook/generator-web-infans">View on GitHub</a>
 
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/chrisvanmook/generator-web-infans/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/chrisvanmook/generator-web-infans/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
+          <h1 id="project_title">Web Infans - a yeoman webapp generator</h1>
+          <h2 id="project_tagline">Gulp, preprocessors, automated js / sass documentation &amp; styleguide, twig templating, create a minified build folder etc...</h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/chrisvanmook/generator-web-infans/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/chrisvanmook/generator-web-infans/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a id="generator-web-infans---a-yeoman-web-app-generator--" class="anchor" href="#generator-web-infans---a-yeoman-web-app-generator--" aria-hidden="true"><span class="octicon octicon-link"></span></a>generator-web-infans - a yeoman web app generator <a href="https://travis-ci.org/chrisvanmook/generator-web-infans"><img src="https://travis-ci.org/chrisvanmook/generator-web-infans.svg?branch=master" alt="Build Status"></a> <a href="https://david-dm.org/chrisvanmook/generator-web-infans.svg"><img src="https://david-dm.org/chrisvanmook/generator-web-infans.svg" alt="dependencies"></a>
 </h1>
@@ -125,21 +110,17 @@ Choose your favorite pre-processor and JS libraries and let Web Infans do the re
 
 <p>generator-web-infans is distributed under the MIT License. One file and one file only (src/js/app.js) is distributed under the slightly modified MIT License.</p>
       </section>
+    </div>
 
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/chrisvanmook">chrisvanmook</a> can be found on <a href="https://github.com/chrisvanmook/generator-web-infans">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Web Infans - a yeoman webapp generator maintained by <a href="https://github.com/chrisvanmook">chrisvanmook</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
-
     </div>
 
     
+
   </body>
 </html>
