Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1>
 <a id="generator-web-initium---a-yeoman-web-app-generator" class="anchor" href="#generator-web-initium---a-yeoman-web-app-generator" aria-hidden="true"><span class="octicon octicon-link"></span></a>generator-web-initium - a yeoman web app generator</h1>
 
-<p><a href="https://travis-ci.org/chrisvanmook/generator-web-initium"><img src="https://travis-ci.org/chrisvanmook/generator-web-initium.svg?branch=master" alt="Build Status"></a> <a href="https://david-dm.org/chrisvanmook/generator-web-initium.svg"><img src="https://david-dm.org/chrisvanmook/generator-web-initium.svg" alt="dependencies"></a></p>
+<p><a href="https://travis-ci.org/chrisvanmook/generator-web-initium"><img src="https://travis-ci.org/chrisvanmook/generator-web-initium.svg?branch=master" alt="Build Status"></a> <a href="https://david-dm.org/chrisvanmook/generator-web-initium.svg"><img src="https://david-dm.org/chrisvanmook/generator-web-initium.svg" alt="dependencies"></a> <a href="https://coveralls.io/r/chrisvanmook/generator-web-initium"><img src="https://coveralls.io/repos/chrisvanmook/generator-web-initium/badge.svg" alt="Coverage Status"></a></p>
 
 <p>Web Initium is a yeoman generator that will help you bootstrap your webapp with gulp.
 Choose your favorite pre-processor and JS libraries and let Web Initium do the rest.</p>
